# dApp-library

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS  MANIFEST.in  README.md  ignore.md  main.py  pyproject.toml  rajeev.py  requirements.txt  setup.py
.github/workflows/: mirror.yml  release.yml  tag-and-release-on-version-change.yml  tag-and-release.yml  tag-on-version-change.yml  test.yml
dapp/: setup.py
dapp/dapp/: dapp.py
docker/: Dockerfile  build.sh
docs/: dapp_uml.txt  ground_truth_labeling.md  gui_uml.txt
e3protocol/: README.md  build_asn.sh  dump_packets.sh
e3protocol/client/: client.c
e3protocol/defs/: e3.c
e3protocol/server/: server.py
e3protocol/wrapper/: e3.c  e3.h
examples/: nvidia_dapp.py  simple_dapp.py  spectrum_dapp.py
spear/: eval_dl_pytorch.py  iq_trigger.py  model.py  spear.py
src/dapp/: dapp.py  demo_plotter.py  e3_connector.py  e3_interface.py  energy_plotter.py  grafana.py  iq_plotter.py  plotter.py
src/dapp/templates/: index.html
src/dashboard/: app.py  tester.py
src/e3interface/: e3_connector.py  e3_encoder.py  e3_interface.py  e3_logging.py
src/e3interface/defs/: e3.asn  e3.json  e3_new.asn
src/iq_saver/: __init__.py  iq_saver.py
src/nvidia/: nvidia_dapp.py
src/nvidia/defs/: e3sm_nvidia.asn  e3sm_nvidia.json
src/simple/: simple_dapp.py
src/simple/defs/: e3sm_simple.asn
src/spectrum/: adaptive_noise_floor.py  embargo_manager.py  spectrum_dapp.py  threshold_detector.py
src/spectrum/defs/: e3sm_spectrum.asn  e3sm_spectrum.json
src/visualization/: dashboard.py  energy.py  grafana.py  influx.py  iq.py
src/visualization/templates/: index.html
tests/: test_dashboard.py  test_iq_saver.py
tools/: README.md  asntojson.py  generate_sm.sh  read_recording.py
trigger/: iq_trigger.py
